--- a/Day 4 - Font Viewer/main.css
+++ b/Day 4 - Font Viewer/main.css
@@ -12,9 +12,46 @@ body {
 
 .container {
     background-color: #8a5a61;
-    height: 600px;
+    height: 700px;
     width: 700px;
     margin: 0 auto;
     border-radius: 8px;
     box-shadow: 1px 3px 50px rgb(0, 0, 0, 0.3);
+    padding: 2em;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+#input, #input-one, #input-two, #input-three, #input-four  {
+    border-radius: 2px;
+    padding: 10px;
+    font-size: 1rem;
+    width: 98%;
+    height: 40px;
+    resize: none;
+    box-shadow: 1px 3px 50px rgb(0, 0, 0, 0.3);
+}
+
+#input-one {
+    font-family: 'Courier New', Courier, monospace;
+}
+
+#input-two {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#input-three {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+#input-four {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+p {
+    color: white;
+    font-weight: bold;
+    font-size: 1.3rem;
+    font-family: Arial, Helvetica, sans-serif;
 }
