--- a/Day 19 - Reviews Quotes/style.css
+++ b/Day 19 - Reviews Quotes/style.css
@@ -4,7 +4,7 @@
 
 html, body {
     margin: 0;
-    height: 100%;
+    height: 800px;
     width: 100%;
 }
 
@@ -34,7 +34,7 @@ body {
     text-align: center;
     max-width: 700px;
     margin: 0 auto;
-    height: 45%;
+    height: 30em;
     padding: 2em;
     box-shadow: 0px 3px 20px rgba(0, 0, 0, 0.1);
 }
